(main) working changes with api user and login with migrations frontend
